grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    import_statement: ($) => seq("import", $._import_list),

    import_from_statement: ($) =>
      seq(
        "from",
        field("module_name", choice($.relative_import, $.dotted_name)),
        "import",
        choice($.wildcard_import, $._import_list, seq("(", $._import_list, ")"))
      ),

    _import_list: ($) =>
      seq(
        commaSep1(field("name", choice($.dotted_name, $.aliased_import))),
        optional(",")
      ),

    aliased_import: ($) =>
      seq(field("name", $.dotted_name), "as", field("alias", $.identifier)),

    wildcard_import: (_) => "*",

    named_expression: ($) =>
      seq(
        field("name", $._named_expression_lhs),
        ":=",
        field("value", $.expression)
      ),

    _named_expression_lhs: ($) => choice($.identifier, $.keyword_identifier),

    return_statement: ($) => seq("return", optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    raise_statement: ($) =>
      seq(
        "raise",
        optional($._expressions),
        optional(seq("from", field("cause", $.expression)))
      ),

    pass_statement: (_) => prec.left("pass"),
    break_statement: (_) => prec.left("break"),
    if_statement: ($) =>
      seq(
        optional("comptime"),
        "if",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
        repeat(field("alternative", $.elif_clause)),
        optional(field("alternative", $.else_clause))
      ),

    elif_clause: ($) =>
      seq(
        "elif",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite)
      ),

    else_clause: ($) => seq("else", ":", field("body", $._suite)),

    for_statement: ($) =>
      seq(
        optional("comptime"),
        "for",
        field("left", $._left_hand_side),
        "in",
        field("right", $._expressions),
        ":",
        field("body", $._suite),
        field("alternative", optional($.else_clause))
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.expression),
        ":",
        field("body", $._suite),
        optional(field("alternative", $.else_clause))
      ),

    with_statement: ($) =>
      seq("with", $.with_clause, ":", field("body", $._suite)),

    with_clause: ($) =>
      choice(
        seq(commaSep1($.with_item), optional(",")),
        seq("(", commaSep1($.with_item), optional(","), ")")
      ),

    with_item: ($) => prec.dynamic(1, seq(field("value", $.expression))),

    function_definition: ($) =>
      seq(
        "def",
        field("name", $.identifier),
        field("type_parameters", optional($.parameter_list)),
        field("argument_list", $.argument_list),
        // TODO: Which one comes first in place, raises or effects
        field("raises_clause", optional($.raises_clause)),
        field("effects", optional($.effects)),
        optional(seq("->", field("return_type", $.type))),
        ":",
        field("body", $._suite)
      ),
    raises_clause: ($) =>
      prec.left(seq("raises", optional(field("error_type", $.type)))),
    effects: (_) => "register_passable", // TODO: Add more function effects

    argument_list: ($) => seq("(", optional($._arguments), ")"),

    parameter_list: ($) =>
      seq(
        "[",
        commaSep1(
          choice($.type, $.infer_only_marker, seq($.type, "=", $.type))
        ),
        optional(","),
        "]"
      ),

    call_argument_list: ($) =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument
            )
          )
        ),
        optional(","),
        ")"
      ),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block)
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    expression_list: ($) =>
      prec.right(
        seq(
          $.expression,
          choice(",", seq(repeat1(seq(",", $.expression)), optional(",")))
        )
      ),

    dotted_name: ($) => prec(1, sep1($.identifier, ".")),

    // Match cases

    _arguments: ($) => seq(commaSep1($.argument), optional(",")),

    _patterns: ($) => seq(commaSep1($.pattern), optional(",")),

    tuple_pattern: ($) => seq("(", optional($._patterns), ")"),

    as_pattern: ($) =>
      prec.left(
        seq(
          $.expression,
          "as",
          field("alias", alias($.expression, $.as_pattern_target))
        )
      ),

    // Expressions

    _expression_within_for_in_clause: ($) =>
      choice($.expression, alias($.lambda_within_for_in_clause, $.lambda)),

    binary_operator: ($) => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.primary_expression)
            )
          )
        )
      );
    },

    unary_operator: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice("+", "-", "~")),
          field("argument", $.primary_expression)
        )
      ),

    _not_in: (_) => seq("not", "in"),

    _is_not: (_) => seq("is", "not"),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                "operators",
                choice(
                  "<",
                  "<=",
                  "==",
                  "!=",
                  ">=",
                  ">",
                  "<>",
                  "in",
                  alias($._not_in, "not in"),
                  "is",
                  alias($._is_not, "is not")
                )
              ),
              $.primary_expression
            )
          )
        )
      ),

    assignment: ($) => choice($._comptime_assignment, $._regular_assignment),
    _comptime_assignment: ($) =>
      seq(
        "comptime",
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._comptime_right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._comptime_right_hand_side)
          )
        )
      ),
    _regular_assignment: ($) =>
      seq(
        optional("var"),
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._right_hand_side)
          )
        )
      ),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list),

    pattern_list: ($) =>
      seq(
        $.pattern,
        choice(",", seq(repeat1(seq(",", $.pattern)), optional(",")))
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", choice($.primary_expression, "self")),
          ".",
          field("attribute", $.identifier)
        )
      ),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", choice($.identifier, $.attribute, $.self_type)),
          field("type_constraint", optional($.parameter_list)),
          field(
            "arguments",
            choice($.generator_expression, $.call_argument_list)
          )
        )
      ),
    comptime_call: ($) =>
      prec(
        PREC.call,
        seq(
          "comptime",
          field(
            "arguments",
            choice($.generator_expression, $.call_argument_list)
          )
        )
      ),

    typed_argument: ($) =>
      prec(
        PREC.typed_argument,
        seq(
          optional(choice("mut", "var", "out", "deinit", "ref")),
          choice(
            $.identifier,
            $.list_splat_pattern,
            $.dictionary_splat_pattern
          ),
          ":",
          field("type", $.type)
        )
      ),

    type: ($) =>
      choice(
        prec(1, $.expression),
        $.splat_type,
        $.generic_type,
        $.union_type,
        $.constrained_type,
        $.member_type,
        $.self_type,
        $.function_pointer_type
      ),
    generic_type: ($) =>
      prec(
        1,
        seq(choice($.identifier, alias("type", $.identifier)), $.parameter_list)
      ),
    constrained_type: ($) =>
      prec.right(seq(optional("var"), $.type, ":", $.type)),
    function_pointer_type: ($) =>
      prec.left(
        seq(
          "def",
          field("argument_list", $.function_pointer_arguments),
          repeat($._function_pointer_effect),
          "->",
          field("return_type", $.type)
        )
      ),
    function_pointer_arguments: ($) =>
      seq("(", optional(seq(commaSep1($.type), optional(","))), ")"),
    _function_pointer_effect: ($) =>
      choice(
        "thin",
        "register_passable",
        $.raises_clause,
        $._function_pointer_abi
      ),
    list: ($) => seq("[", optional($._collection_elements), "]"),

    tuple: ($) => seq("(", optional($._collection_elements), ")"),

    pair: ($) =>
      seq(field("key", $.expression), ":", field("value", $.expression)),

    list_comprehension: ($) =>
      seq("[", field("body", $.expression), $._comprehension_clauses, "]"),

    dictionary_comprehension: ($) =>
      seq("{", field("body", $.pair), $._comprehension_clauses, "}"),

    set_comprehension: ($) =>
      seq("{", field("body", $.expression), $._comprehension_clauses, "}"),

    _comprehension_clauses: ($) =>
      seq($.for_in_clause, repeat(choice($.for_in_clause, $.if_clause))),

    parenthesized_expression: ($) =>
      prec(
        PREC.parenthesized_expression,
        seq("(", choice($.expression, $.yield), ")")
      ),

    _collection_elements: ($) =>
      seq(
        commaSep1(
          choice(
            $.expression,
            $.yield,
            $.list_splat,
            $.parenthesized_list_splat
          )
        ),
        optional(",")
      ),

    for_in_clause: ($) =>
      prec.left(
        seq(
          "for",
          field("left", $._left_hand_side),
          "in",
          field("right", commaSep1($._expression_within_for_in_clause)),
          optional(",")
        )
      ),

    if_clause: ($) => seq("if", $.expression),

    conditional_expression: ($) =>
      prec.right(
        PREC.conditional,
        seq($.expression, "if", $.expression, "else", $.expression)
      ),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end
      ),

    string_content: ($) =>
      prec.right(
        repeat1(
          choice(
            $.escape_interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content
          )
        )
      ),

    interpolation: ($) =>
      seq(
        "{",
        field("expression", $._f_expression),
        optional("="),
        optional(field("type_conversion", $.type_conversion)),
        optional(field("format_specifier", $.format_specifier)),
        "}"
      ),

    _f_expression: ($) =>
      choice($.expression, $.expression_list, $.pattern_list, $.yield),

    _not_escape_sequence: (_) => token.immediate("\\"),

    integer: (_) =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/)),
          repeat1(/[0-9]+_*/)
        )
      ),

    float: (_) => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent)
          ),
          optional(/[jJ]/)
        )
      );
    },

    identifier: ($) =>
      choice(
        $._identifier,
        seq(
          $.escaped_identifier_start,
          repeat1($.escaped_identifier_content),
          $.escaped_identifier_end
        )
      ),

    _identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    true: (_) => "True",
    comment: (_) => token(seq("#", /.*/)),

    infer_only_marker: (_) => "//",
