test/corpus/comprehensions.txt
==================
List Comprehension
==================

var squares = [x * x for x in [0, 1, 2, 3, 4] if x % 2 == 0]

var positive = [x for x in range(-3, 3) if x > 0]

---

(module
  (assignment
    left: (identifier)
    right: (list_comprehension
      body: (binary_operator
        left: (identifier)
        right: (identifier))
      (for_in_clause
        left: (identifier)
        right: (list
          (integer)
          (integer)
          (integer)
          (integer)
          (integer)))
      (if_clause
        (comparison_operator
          (binary_operator
            left: (identifier)
            right: (integer))
          (integer)))))
  (assignment
    left: (identifier)
    right: (list_comprehension
      body: (identifier)
      (for_in_clause
        left: (identifier)
        right: (call
          function: (identifier)
          arguments: (argument_list
            (unary_operator
              argument: (integer))
            (integer))))
      (if_clause
        (comparison_operator
          (identifier)
          (integer))))))


=================
Set Comprehension
=================

var fibs = {fib(x) for x in range(6)}

---

(module
  (assignment
    left: (identifier)
    right: (set_comprehension
      body: (call
        function: (identifier)
        arguments: (argument_list
          (identifier)))
      (for_in_clause
        left: (identifier)
        right: (call
          function: (identifier)
          arguments: (argument_list
            (integer)))))))

==================
Dict Comprehension
==================

var dict_squares = {x: x * x for x in range(3)}

var lengths: Dict[String, Int] = {
    k: len(k) for k in ["one", "two", "three", "four"]
}

---

(module
  (assignment
    left: (identifier)
    right: (dictionary_comprehension
      body: (pair
        key: (identifier)
        value: (binary_operator
          left: (identifier)
          right: (identifier)))
      (for_in_clause
        left: (identifier)
        right: (call
          function: (identifier)
          arguments: (argument_list
            (integer))))))
  (assignment
    left: (identifier)
    type: (type
      (generic_type
        (identifier)
        (type_parameter_list
          (type
            (identifier))
          (type
            (identifier)))))
    right: (dictionary_comprehension
      body: (pair
        key: (identifier)
        value: (call
          function: (identifier)
          arguments: (argument_list
            (identifier))))
      (for_in_clause
        left: (identifier)
        right: (list
          (string
            (string_start)
            (string_content)
            (string_end))
          (string
            (string_start)
            (string_content)
            (string_end))
          (string
            (string_start)
            (string_content)
            (string_end))
          (string
            (string_start)
            (string_content)
            (string_end)))))))

====================
Comprehension Clause
====================

var products = [
    (x, y, x * y)
    for x in range(3)
    for y in range(3)
    if (x + y) % 2 == 0
]

---

(module
  (assignment
    left: (identifier)
    right: (list_comprehension
      body: (tuple
        (identifier)
        (identifier)
        (binary_operator
          left: (identifier)
          right: (identifier)))
      (for_in_clause
        left: (identifier)
        right: (call
          function: (identifier)
          arguments: (argument_list
            (integer))))
      (for_in_clause
        left: (identifier)
        right: (call
          function: (identifier)
          arguments: (argument_list
            (integer))))
      (if_clause
        (comparison_operator
          (binary_operator
            left: (parenthesized_expression
              (binary_operator
                left: (identifier)
                right: (identifier)))
            right: (integer))
          (integer))))))
