test/corpus/context.txt
============
With Context
============

with open("input.txt") as f_in, open("output.txt", "w") as f_out:
    f_out.write(f_in.read())

---

(module
  (with_statement
    (with_clause
      (with_item
        value: (as_pattern
          (call
            function: (identifier)
            arguments: (argument_list
              (string
                (string_start)
                (string_content)
                (string_end))))
          alias: (as_pattern_target
            (identifier))))
      (with_item
        value: (as_pattern
          (call
            function: (identifier)
            arguments: (argument_list
              (string
                (string_start)
                (string_content)
                (string_end))
              (string
                (string_start)
                (string_content)
                (string_end))))
          alias: (as_pattern_target
            (identifier)))))
    body: (block
      (call
        function: (attribute
          object: (identifier)
          attribute: (identifier))
        arguments: (argument_list
          (call
            function: (attribute
              object: (identifier)
              attribute: (identifier))
            arguments: (argument_list)))))))
