test/corpus/expressions.txt
===================
Ternary Conditional
===================

var label = "even" if x % 2 == 0 else "odd"

var size = (
    "small" if n < 10
        else "large" if n > 100
        else "medium"
)

---

(module
  (assignment
    left: (identifier)
    right: (conditional_expression
      (string
        (string_start)
        (string_content)
        (string_end))
      (comparison_operator
        (binary_operator
          left: (identifier)
          right: (integer))
        (integer))
      (string
        (string_start)
        (string_content)
        (string_end))))
  (assignment
    left: (identifier)
    right: (parenthesized_expression
      (conditional_expression
        (string
          (string_start)
          (string_content)
          (string_end))
        (comparison_operator
          (identifier)
          (integer))
        (conditional_expression
          (string
            (string_start)
            (string_content)
            (string_end))
          (comparison_operator
            (identifier)
            (integer))
          (string
            (string_start)
            (string_content)
            (string_end)))))))

===============
Walrus Operator
===============

if (n := len(items)) > 10:
    print(n)

while (name := input("Prompt: ")) != "quit":
    print(name)

---

(module
  (if_statement
    condition: (comparison_operator
      (parenthesized_expression
        (named_expression
          name: (identifier)
          value: (call
            function: (identifier)
            arguments: (argument_list
              (identifier)))))
      (integer))
    consequence: (block
      (call
        function: (identifier)
        arguments: (argument_list
          (identifier)))))
  (while_statement
    condition: (comparison_operator
      (parenthesized_expression
        (named_expression
          name: (identifier)
          value: (call
            function: (identifier)
            arguments: (argument_list
              (string
                (string_start)
                (string_content)
                (string_end))))))
      (string
        (string_start)
        (string_content)
        (string_end)))
    body: (block
      (call
        function: (identifier)
        arguments: (argument_list
          (identifier))))))

===================
Comptime Expression
===================

var x = comptime(heavy_calculation())

---

(module
  (assignment
    left: (identifier)
    right: (comptime_call
      arguments: (argument_list
        (call
          function: (identifier)
          arguments: (argument_list))))))
