test/corpus/functions.txt
================
Simple Functions
================

def main():
    print("Hello, World!")

def greet(name: String) -> String:
    return t"Hello, {name}"

def do_nothing():
    pass

---

(module
  (function_definition
    name: (identifier)
    argument_list: (argument_list)
    body: (block
      (call
        function: (identifier)
        arguments: (call_argument_list
          (string
            (string_start)
            (string_content)
            (string_end))))))
  (function_definition
    name: (identifier)
    argument_list: (argument_list
      (typed_argument
        (identifier)
        type: (type
          (identifier))))
    return_type: (type
      (identifier))
    body: (block
      (return_statement
        (string
          (string_start)
          (string_content)
          (interpolation
            expression: (identifier))
          (string_end)))))
  (function_definition
    name: (identifier)
    argument_list: (argument_list)
    body: (block
      (pass_statement))))

=================
Complex Functions
=================

def clamp[T: Comparable & ImplicitlyCopyable](
    val: T, lo: T, hi: T,
) -> T:
    if val < lo:
        return lo
    if val > hi:
        return hi
    return val

---

(module
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (type
        (constrained_type
          (type
            (identifier))
          (type
            (binary_operator
              left: (identifier)
              right: (identifier))))))
    argument_list: (argument_list
      (typed_argument
        (identifier)
        type: (type
          (identifier)))
      (typed_argument
        (identifier)
        type: (type
          (identifier)))
      (typed_argument
        (identifier)
        type: (type
          (identifier))))
    return_type: (type
      (identifier))
    body: (block
      (if_statement
        condition: (comparison_operator
          (identifier)
          (identifier))
        consequence: (block
          (return_statement
            (identifier))))
      (if_statement
        condition: (comparison_operator
          (identifier)
          (identifier))
        consequence: (block
          (return_statement
            (identifier))))
      (return_statement
        (identifier)))))


===================
Function Parameters
===================

def inferred_type[T: Writable, //](value: T):
    print(t"Value is {value}. Type is {get_type_name[T]()}.")

def main():
    inferred_type(5)
    inferred_type("Hello")
    inferred_type[T=Int](5)

---

(module
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (type
        (constrained_type
          (type
            (identifier))
          (type
            (identifier))))
      (infer_only_marker))
    argument_list: (argument_list
      (typed_argument
        (identifier)
        type: (type
          (identifier))))
    body: (block
      (call
        function: (identifier)
        arguments: (call_argument_list
          (string
            (string_start)
            (string_content)
            (interpolation
              expression: (identifier))
            (string_content)
            (interpolation
              expression: (call
                function: (identifier)
                parameters: (parameter_list
                  (type
                    (identifier)))
                arguments: (call_argument_list)))
            (string_content)
            (string_end))))))
  (function_definition
    name: (identifier)
    argument_list: (argument_list)
    body: (block
      (call
        function: (identifier)
        arguments: (call_argument_list
          (integer)))
      (call
        function: (identifier)
        arguments: (call_argument_list
          (string
            (string_start)
            (string_content)
            (string_end))))
      (call
        function: (identifier)
        parameters: (parameter_list
          (named_parameter
            name: (type
              (identifier))
            value: (type
              (identifier))))
        arguments: (call_argument_list
          (integer))))))


================================
Escaped Identifier Name Funciton
================================

def `import`():
    print("In `import`")

def main():
    `import`()

---

(module
  (function_definition
    name: (identifier
      (escaped_identifier_start)
      (escaped_identifier_content)
      (escaped_identifier_end))
    argument_list: (argument_list)
    body: (block
      (call
        function: (identifier)
        arguments: (call_argument_list
          (string
            (string_start)
            (string_content)
            (string_end))))))
  (function_definition
    name: (identifier)
    argument_list: (argument_list)
    body: (block
      (call
        function: (identifier
          (escaped_identifier_start)
          (escaped_identifier_content)
          (escaped_identifier_end))
        arguments: (call_argument_list)))))
